Mobile menu ul now has a z-index, fixed a bug where live search for search atom was also returning unpublished posts.

--- a/src/assets/less/atoms/menu.less
+++ b/src/assets/less/atoms/menu.less
@@ -36,6 +36,7 @@
         &.active {
             display: block;
             opacity: 1;
+            z-index: 9;
         }    
         > li {
             display: block;
